force-app/main/default/objects/Course_Session__c/Course_Session__c.object-meta.xml
<CustomObject>
    <description>Custom Object to track all Courses and Sessions provided by Welco</description>
    <label>Course/Session</label>
    <nameField>
        <label>Course/Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses &amp; Sessions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>