force-app/main/default/objects/Course_Session__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Location city</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>