force-app/main/default/objects/Course_Session__c/fields/Course_Length_Hours__c.field-meta.xml
<CustomField>
    <fullName>Course_Length_Hours__c</fullName>
    <description>Course Duration in total Learning/Class Hours</description>
    <label>Course Length (Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>