force-app/main/default/objects/Course_Session__c/fields/Currently_Available__c.field-meta.xml
<CustomField>
    <fullName>Currently_Available__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Identify if the course/session is still available for signup</description>
    <label>Currently Available</label>
    <type>Checkbox</type>
</CustomField>