force-app/main/default/objects/Course_Session__c/fields/Delivery_Format__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Format__c</fullName>
    <description>How the course will be delivered</description>
    <label>Delivery Format</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Classroom</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>In-House</fullName>
            </value>
            <value>
                <fullName>Lunch &amp; Learn</fullName>
            </value>
            <value>
                <fullName>Off-Site</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Seminar</fullName>
                <label>Seminar/Workshop</label>
            </value>
            <value>
                <fullName>Trailhead</fullName>
            </value>
            <value>
                <fullName>Virtual Classroom</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>