force-app/main/default/objects/Course_Session__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Course Details - What the course will generally cover</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>