force-app/main/default/objects/Course_Session__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <description>End Date for the course</description>
    <label>End</label>
    <type>Date</type>
</CustomField>