force-app/main/default/objects/Course_Session__c/fields/Estimated_Cost_per_Student__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost_per_Student__c</fullName>
    <description>Calculates estimated cost per student</description>
    <formula>IF(ISBLANK(TotalCost__c), null, TotalCost__c / (Total_Enrolled__c + Total_Waitlist_InReview__c))</formula>
    <inlineHelpText>Estimated cost per student based on total cost and total students enrolled and waitlisted/in review</inlineHelpText>
    <label>Estimated Cost per Student</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>