force-app/main/default/objects/Course_Session__c/fields/Knowledge_Category__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Category__c</fullName>
    <label>Knowledge Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Industry Knowledge</fullName>
            </value>
            <value>
                <fullName>Industry Standards</fullName>
            </value>
            <value>
                <fullName>Product/Supplier</fullName>
            </value>
            <value>
                <fullName>Professional Development</fullName>
            </value>
            <value>
                <fullName>Role Training/Internal Processes</fullName>
            </value>
            <value>
                <fullName>Software/Systems</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>