force-app/main/default/objects/Course_Session__c/fields/ProviderAccount__c.field-meta.xml
<CustomField>
    <fullName>ProviderAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to Account to relate the provider information</description>
    <label>Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Courses &amp; Sessions</relationshipLabel>
    <relationshipName>Courses_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>