force-app/main/default/objects/Course_Session__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <description>Start Date of course/session</description>
    <label>Start</label>
    <type>Date</type>
</CustomField>