force-app/main/default/objects/Course_Session__c/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <description>Location State/Province</description>
    <label>State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>