force-app/main/default/objects/Course_Session__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Updated automatically when submitted for approval</inlineHelpText>
    <label>Approved by Management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Approved_by_Management</valueSetName>
    </valueSet>
</CustomField>