force-app/main/default/objects/Course_Session__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Location street address</description>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>