force-app/main/default/objects/Course_Session__c/fields/Total_Completed__c.field-meta.xml
<CustomField>
    <fullName>Total_Completed__c</fullName>
    <description>Calculates total students who have completed the course</description>
    <label>Total Completed</label>
    <summaryFilterItems>
        <field>Enrollment__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Enrollment__c.Course_Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>