force-app/main/default/objects/Course_Session__c/fields/Total_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Total_Enrolled__c</fullName>
    <description>Roll-up field to calculate total students enrolled</description>
    <label>Total Enrolled</label>
    <summaryFilterItems>
        <field>Enrollment__c.Status__c</field>
        <operation>equals</operation>
        <value>Registered, In Progress, Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Enrollment__c.Course_Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>