force-app/main/default/objects/Course_Session__c/fields/Total_Waitlist_InReview__c.field-meta.xml
<CustomField>
    <fullName>Total_Waitlist_InReview__c</fullName>
    <description>Roll-up field to calculate total students in review for enrollment or wait listed</description>
    <label>Total Waitlisted/In Review</label>
    <summaryFilterItems>
        <field>Enrollment__c.Status__c</field>
        <operation>equals</operation>
        <value>In Review, Waitlisted</value>
    </summaryFilterItems>
    <summaryForeignKey>Enrollment__c.Course_Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>