force-app/main/default/objects/Course_Session__c/fields/TotalCost__c.field-meta.xml
<CustomField>
    <fullName>TotalCost__c</fullName>
    <description>Calculates the total cost from the training expenses</description>
    <label>Total Cost</label>
    <summarizedField>Course_Expense__c.Amount__c</summarizedField>
    <summaryForeignKey>Course_Expense__c.Course_Session__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>