force-app/main/default/objects/Course_Session__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Picklist to identify course type and affects the selection of delivery</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External - Supplier</fullName>
            </value>
            <value>
                <fullName>External - Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>