force-app/main/default/objects/Course_Session__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>URL field for the website or web link to the Trailhead</description>
    <label>Website</label>
    <type>Url</type>
</CustomField>