force-app/main/default/objects/Course_Session__c/fields/Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Postal_Code__c</fullName>
    <description>Location zip or postal code</description>
    <label>Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>