force-app/main/default/objects/Course_Session__c/listViews/Active_Courses.listView-meta.xml
<ListView>
    <fullName>Active_Courses</fullName>
    <columns>NAME</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <columns>Total_Enrolled__c</columns>
    <columns>Total_Completed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Currently_Available__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Courses</label>
    <sharedTo>
        <group>Everyone</group>
    </sharedTo>
</ListView>