force-app/main/default/objects/Course_Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProviderAccount__c</columns>
    <columns>Currently_Available__c</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Courses</label>
</ListView>