force-app/main/default/objects/Course_Session__c/listViews/Courses_Pending_Approval.listView-meta.xml
<ListView>
    <fullName>Courses_Pending_Approval</fullName>
    <columns>NAME</columns>
    <columns>ProviderAccount__c</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Courses Pending Approval</label>
    <sharedTo>
        <group>Marketing</group>
        <group>Salesforce_Managers</group>
        <group>Senior_Management</group>
    </sharedTo>
</ListView>